metadata/force-app/main/default/objects/CustomName_XtoIa__c/CustomName_XtoIa__c.object-meta.xml
<CustomObject>
    <description>Description_TtjTl</description>
    <label>CustomLabel_YaHEZ</label>
    <nameField>
        <label>CustomLabel_YaHEZ</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_YaHEZs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>