metadata/force-app/main/default/objects/CustomName_XtoIa__c/fields/CustomField_mMvKP__c.field-meta.xml
<CustomField>
    <fullName>CustomField_mMvKP__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldMEUSE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>